@@ -48,8 +48,8 @@ $g = array(
     "pppoe_interface" => "ngwan0",
     "debug" => false,
     "latest_config" => "2.0",
-    "wireless_regex" => "/^(wi|an|ath|ral|rum|ural|zyd)/",
-    "wireless_hostap_regex" => "/^(wi|ath|ral|rum|ural)/"
+    "wireless_regex" => "/^(wi|an|ath|ral|rum|ural|zyd|run)/",
+    "wireless_hostap_regex" => "/^(wi|ath|ral|rum|ural|run)/"
 );
 
 ?>
